--- a/crates/wx-injector/Cargo.toml
+++ b/crates/wx-injector/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-injectors = { version = "0.1.4"}
+injectors = { version = "0.1.6" }
 sysinfo = "0.30.5"
 windows = { version = "0.52.0", features = ["Win32_Foundation"] }
 wx-payload = { path = "../wx-payload", artifact = "cdylib" }
+simplelog = "0.12.1"
+log = "0.4.20"
